--- a/src/main/java/com/cpw/ews/qa/config/config.properties
+++ b/src/main/java/com/cpw/ews/qa/config/config.properties
@@ -7,3 +7,5 @@ browser = ff
 #url = http://172.31.6.104:4503/geohome.html
 #stage
 url = https://loadtest-www.carphonewarehouse.com/home.html
+pmurl = https://loadtest-www.carphonewarehouse.com/mobiles/pay-monthly.html
+pgurl = https://loadtest-www.carphonewarehouse.com/mobiles/pay-as-you-go.html
